--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.485.0",
+    "@nestjs-modules/mailer": "^1.7.1",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
@@ -117,6 +118,9 @@
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3",
     "vue": "^3.4.5"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
