--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   awesome-nest-db:
-    image: postgres
+    image: postgres:16
     container_name: awesome-nest-db
     restart: always
     environment:
@@ -22,4 +22,3 @@ services:
 volumes:
   awesome-nest-db-vol:
     driver: local
-  
