--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "build:prod": "tsc -p tsconfig.build.json",
     "start:dev": "ts-node src/main.ts",
     "start:prod": "node dist/main.js",
-    "typeorm": "typeorm-ts-node-esm",
-    "migration:generate": "yarn run typeorm migration:generate -d ormconfig",
-    "migration:create": "yarn run typeorm migration:create -d ormconfig",
-    "migration:run": "yarn run typeorm migration:run -d ormconfig",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "migration:generate": "yarn run typeorm --dataSource=src/data-source.ts migration:generate",
+    "migration:create": "yarn run typeorm migration:create",
+    "migration:run": "yarn run typeorm --dataSource=src/data-source.ts migration:run",
     "new": "hygen new",
-    "migration:revert": "yarn run typeorm migration:revert -d ormconfig",
-    "schema:drop": "yarn run typeorm schema:drop -d ormconfig",
+    "migration:revert": "yarn run typeorm --dataSource=src/data-source.ts migration:revert",
+    "schema:drop": "yarn run typeorm --dataSource=src/data-source.ts schema:drop",
     "watch:dev": "ts-node-dev src/main.ts",
     "debug:dev": "cross-env TS_NODE_CACHE=false ts-node-dev --inspect --ignore '/^src/.*\\.spec\\.ts$/' src/main.ts",
     "lint": "eslint . --ext .ts",
@@ -33,22 +33,22 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.485.0",
-    "@nestjs/common": "^10.3.0",
-    "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.3.0",
-    "@nestjs/cqrs": "^10.2.6",
-    "@nestjs/jwt": "^10.2.0",
-    "@nestjs/microservices": "^10.3.0",
-    "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.3.0",
-    "@nestjs/swagger": "^7.1.17",
-    "@nestjs/terminus": "^10.2.0",
-    "@nestjs/throttler": "^5.1.1",
-    "@nestjs/typeorm": "^10.0.1",
+    "@nestjs/common": "^11.0.17",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.0.17",
+    "@nestjs/cqrs": "^11.0.3",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/microservices": "^11.0.17",
+    "@nestjs/passport": "^11.0.5",
+    "@nestjs/platform-express": "^11.0.17",
+    "@nestjs/swagger": "^11.1.3",
+    "@nestjs/terminus": "^11.0.0",
+    "@nestjs/throttler": "^6.4.0",
+    "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^5.1.1",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "~0.5.1",
-    "class-validator": "~0.14.0",
+    "class-validator": "^0.14.1",
     "compression": "^1.7.4",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
@@ -61,20 +61,20 @@
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.11.3",
-    "reflect-metadata": "^0.2.1",
-    "rxjs": "^7.8.1",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
     "source-map-support": "^0.5.21",
     "swagger-ui-express": "^5.0.0",
     "tslib": "^2.6.2",
-    "typeorm": "^0.3.19",
+    "typeorm": "^0.3.22",
     "typeorm-transactional": "~0.5.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@handfish/hygen": "^6.1.6",
-    "@nestjs/cli": "^10.2.1",
-    "@nestjs/schematics": "^10.1.1",
-    "@nestjs/testing": "^10.3.0",
+    "@nestjs/cli": "^11.0.6",
+    "@nestjs/schematics": "^11.0.5",
+    "@nestjs/testing": "^11.0.17",
     "@types/bcrypt": "^5.0.2",
     "@types/cache-manager-redis-store": "^2.0.4",
     "@types/compression": "^1.7.5",
@@ -109,13 +109,14 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "~15.2.0",
+    "nestjs-seeder": "^0.3.2",
     "prettier": "^3.1.1",
     "release-it": "^17.0.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3",
+    "typescript": "^5.8.3",
     "vue": "^3.4.5"
   },
   "jest": {
@@ -131,5 +132,6 @@
     },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
