chore(version-upgrade): upgraded eslint to latest version and migrated configs, upgraded nestjs packages

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "schema:drop": "yarn run typeorm --dataSource=src/data-source.ts schema:drop",
     "watch:dev": "ts-node-dev src/main.ts",
     "debug:dev": "cross-env TS_NODE_CACHE=false ts-node-dev --inspect --ignore '/^src/.*\\.spec\\.ts$/' src/main.ts",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint --fix . --ext .ts",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "test": "NODE_ENV=test jest",
     "test:watch": "NODE_ENV=test jest --watch",
     "test:cov": "NODE_ENV=test jest --coverage",
@@ -33,15 +33,15 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.485.0",
-    "@nestjs/common": "^11.0.17",
+    "@nestjs/common": "^11.1.1",
     "@nestjs/config": "^4.0.2",
-    "@nestjs/core": "^11.0.17",
+    "@nestjs/core": "^11.1.1",
     "@nestjs/cqrs": "^11.0.3",
     "@nestjs/jwt": "^11.0.0",
-    "@nestjs/microservices": "^11.0.17",
+    "@nestjs/microservices": "^11.1.1",
     "@nestjs/passport": "^11.0.5",
-    "@nestjs/platform-express": "^11.0.17",
-    "@nestjs/swagger": "^11.1.3",
+    "@nestjs/platform-express": "^11.1.1",
+    "@nestjs/swagger": "^11.2.0",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
@@ -72,9 +72,9 @@
   },
   "devDependencies": {
     "@handfish/hygen": "^6.1.6",
-    "@nestjs/cli": "^11.0.6",
+    "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
-    "@nestjs/testing": "^11.0.17",
+    "@nestjs/testing": "^11.1.1",
     "@types/bcrypt": "^5.0.2",
     "@types/cache-manager-redis-store": "^2.0.4",
     "@types/compression": "^1.7.5",
@@ -88,22 +88,22 @@
     "@types/passport-jwt": "^3.0.13",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.7",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
     "@vuepress/client": "^2.0.0-rc.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.27.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-canonical": "^4.18.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-n": "^16.6.1",
-    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-sonarjs": "^0.23.0",
-    "eslint-plugin-unicorn": "^50.0.1",
+    "eslint-plugin-unicorn": "^59.0.1",
     "eslint-plugin-unused-imports": "^3.1.0",
     "gh-pages": "^6.1.1",
     "husky": "^8.0.3",
