--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "docs:dev": "vuepress dev -p 7070",
     "docs:build": "DEPLOY_ENV=gh-pages vuepress build",
     "docs:deploy": "yarn docs:build && gh-pages -d .vuepress/dist",
-    "prepare": "husky install",
+    "prepare": "husky",
     "release": "release-it"
   },
   "dependencies": {
@@ -71,6 +71,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-angular": "^19.8.1",
     "@handfish/hygen": "^6.1.6",
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
@@ -106,7 +108,7 @@
     "eslint-plugin-unicorn": "^59.0.1",
     "eslint-plugin-unused-imports": "^3.1.0",
     "gh-pages": "^6.1.1",
-    "husky": "^8.0.3",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "~15.2.0",
     "nestjs-seeder": "^0.3.2",
