--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
     "morgan": "^1.10.0",
-    "nestjs-cls": "^3.6.0",
+    "nestjs-cls": "^5.4.3",
     "parse-duration": "^1.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -73,6 +73,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-angular": "^19.8.1",
+    "@faker-js/faker": "^8.0.0",
     "@handfish/hygen": "^6.1.6",
     "@nestjs/cli": "^11.0.7",
     "@nestjs/schematics": "^11.0.5",
@@ -97,16 +98,13 @@
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-canonical": "^4.18.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-import-helpers": "^1.3.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-n": "^16.6.1",
     "eslint-plugin-prettier": "^5.4.0",
-    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
-    "eslint-plugin-sonarjs": "^0.23.0",
+    "eslint-plugin-sonarjs": "^3.0.2",
     "eslint-plugin-unicorn": "^59.0.1",
-    "eslint-plugin-unused-imports": "^3.1.0",
     "gh-pages": "^6.1.1",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
