--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,93 @@
+# Git
 .git
-dist
+.gitignore
+
+# Dependencies
 node_modules
-db-data
-.vuepress
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
+dist
+build
+coverage
+.nyc_output
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE and editor files
 .vscode
+.idea
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Documentation and development files
 docs
+.vuepress
+README.md
+CHANGELOG.md
+LICENSE
+
+# Database data
+db-data
+*.sqlite
+*.db
+
+# Logs
+logs
+*.log
+
+# Testing
+test
+*.spec.ts
+*.test.ts
+jest.config.js
+
+# Linting and formatting
+.eslintrc.*
+.prettierrc
+eslint.config.mjs
+.eslintignore
+
+# TypeScript
+*.tsbuildinfo
+tsconfig.eslint.json
+
+# Husky and git hooks
+.husky
+
+# Cache directories
+.cache
+.temp
+.tmp
+
+# Docker files (avoid recursive copying)
+Dockerfile*
+docker-compose*.yml
+.dockerignore
+
+# CI/CD
+.github
+.gitlab-ci.yml
+
+# Package manager files (keep package.json and yarn.lock)
+package-lock.json
+
+# Misc
+.cursor/
