--- a/package.json
+++ b/package.json
@@ -30,7 +30,12 @@
     "docs:build": "DEPLOY_ENV=gh-pages vuepress build",
     "docs:deploy": "yarn docs:build && gh-pages -d .vuepress/dist",
     "prepare": "husky",
-    "release": "release-it"
+    "release": "release-it",
+    "docker:dev": "./scripts/docker.sh dev",
+    "docker:prod": "./scripts/docker.sh prod",
+    "docker:build": "./scripts/docker.sh build-prod",
+    "docker:stop": "./scripts/docker.sh stop",
+    "docker:logs": "./scripts/docker.sh logs"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.485.0",
