feat(email): implement email queue service with templates

--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,11 @@ REDIS_PORT=6379
 #== Throttler
 THROTTLER_TTL=1m
 THROTTLER_LIMIT=10
+
+#== Email Configuration
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_SECURE=false
+MAIL_USER=your-email@gmail.com
+MAIL_PASSWORD=your-app-password
+MAIL_FROM="Your App <noreply@yourapp.com>"
