--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.817.0",
+    "@nestjs/bullmq": "^11.0.2",
     "@nestjs/common": "^11.1.2",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.2",
@@ -46,22 +47,30 @@
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@react-email/components": "^0.0.41",
+    "@react-email/html": "^0.0.11",
+    "@react-email/render": "^1.1.2",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.53.0",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "~0.5.1",
     "class-validator": "^0.14.2",
     "compression": "^1.8.0",
     "express": "^5.1.0",
+    "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "mime-types": "^2.1.35",
     "morgan": "^1.10.0",
     "nestjs-cls": "^5.4.3",
+    "nodemailer": "^7.0.3",
     "parse-duration": "^1.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.0",
+    "react-email": "^4.0.15",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "source-map-support": "^0.5.21",
@@ -88,7 +97,10 @@
     "@types/mime-types": "^2.1.4",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.6",
+    "@types/nodemailer": "^6.4.17",
     "@types/passport-jwt": "^3.0.13",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
     "@types/supertest": "^6.0.3",
     "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
@@ -111,6 +123,8 @@
     "lint-staged": "~15.2.0",
     "nestjs-seeder": "^0.3.2",
     "prettier": "^3.5.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "release-it": "^17.0.1",
     "supertest": "^7.1.1",
     "ts-jest": "^29.3.4",
