--- a/.env.example
+++ b/.env.example
@@ -34,9 +34,18 @@ NATS_HOST=localhost
 NATS_PORT=4222
 
 #== Redis
-REDIS_CACHE_ENABLED=true
 REDIS_HOST=localhost
 REDIS_PORT=6379
+REDIS_PASSWORD=          # Optional
+REDIS_DB=0
+
+# Cache Settings
+CACHE_DEFAULT_TTL=300    # 5 minutes
+CACHE_MAX_ITEMS=1000
+CACHE_USER_PERMISSIONS_TTL=300
+
+# Monitoring (Development only)
+ENABLE_PERFORMANCE_MONITORING=true
 
 #== Throttler
 THROTTLER_TTL=1m
