--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "class-transformer": "~0.5.1",
     "class-validator": "^0.14.2",
     "compression": "^1.8.0",
+    "cookie-parser": "^1.4.7",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
@@ -114,6 +115,7 @@
     "@nestjs/testing": "^11.1.2",
     "@types/bcrypt": "^5.0.2",
     "@types/compression": "^1.8.0",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.2",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
