--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.817.0",
     "@keyv/redis": "^4.4.0",
-    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.1.2",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.2",
@@ -52,12 +51,12 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^5.1.1",
-    "cache-manager": "^6.4.3",
     "class-transformer": "~0.5.1",
     "class-validator": "^0.14.2",
     "compression": "^1.8.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
     "keyv": "^5.3.3",
     "lodash": "^4.17.21",
